fix(library): fix positioning and cutoff of action dropdown menu by defining right-0 utility class

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -180,6 +180,7 @@ h1, h2, h3, h4, .logo-text {
 .top-4 { top: 1rem; }
 .top-20 { top: 5rem; }
 .left-0 { left: 0; }
+.right-0 { right: 0; }
 .left-4 { left: 1rem; }
 .right-2 { right: 0.5rem; }
 .right-4 { right: 1rem; }
